# bai2-to-csv

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
scripts/: build_package.sh  run_tests.sh
src/bai2_to_csv/: __init__.py  converter.py  models.py  parsers.py
tests/: conftest.py  test_converter.py  test_init.py  test_integration.py  test_models.py  test_parsers.py
tests/data/: sample.bai
