[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bai2-to-csv"
version = "0.1.0"
description = "A Python library to convert BAI2 files to CSV format"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["bai2", "csv", "banking", "finance"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.11.5",
    "pydantic-core>=2.33.2",
    "pandas>=2.2.3",
    "numpy>=2.0.2",
    "python-dateutil>=2.9.0",
    "pytz>=2022.7.1",
    "typing-extensions>=4.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "flake8>=7.2.0",
    "coverage>=7.8.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bai2_to_csv"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true