[tool.poetry]
name = "bai2-to-csv"
version = "0.1.0"
description = "A Python library for converting Bank Administration Institute (BAI2) files to CSV format"
authors = ["porh <heng.porr@gmail.com>"]
maintainers = ["porh <heng.porr@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/hengpor/bai2-to-csv"
repository = "https://github.com/hengpor/bai2-to-csv"
documentation = "https://github.com/hengpor/bai2-to-csv/blob/main/README.md"
packages = [{include = "bai2_to_csv", from = "src"}]
keywords = ["bai2", "csv", "banking", "finance", "file-conversion", "data-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
    "Typing :: Typed",
]
include = [
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
exclude = [
    "tests",
    "docs",
    "*.pyc",
    "*.pyo",
    "*~",
    "__pycache__",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = ">=2.11.5"
pydantic-core = ">=2.33.2"
pandas = ">=2.2.3"
numpy = ">=2.0.2"
python-dateutil = ">=2.9.0"
pytz = ">=2022.7.1"
typing-extensions = ">=4.13.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
pytest-cov = ">=6.1.1"
black = ">=25.1.0"
isort = ">=6.0.1"
mypy = ">=1.15.0"
flake8 = ">=7.2.0"
coverage = ">=7.8.2"
twine = ">=6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--maxfail=5",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/yourusername/bai2-to-csv/issues"
"Changelog" = "https://github.com/yourusername/bai2-to-csv/blob/main/CHANGELOG.md"
"Documentation" = "https://github.com/yourusername/bai2-to-csv#readme"
"Source Code" = "https://github.com/yourusername/bai2-to-csv"