[metadata]
name = bai2-to-csv
version = 0.1.0
description = A Python library to convert BAI2 files to CSV format
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pydantic>=2.0.0
    pandas>=1.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    isort>=5.0.0
    mypy>=1.0.0
    flake8>=6.0.0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,*.egg-info
extend-ignore = E203