[metadata]
name = bai2-to-csv
version = 0.1.0
description = A Python library to convert BAI2 files to CSV format
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pydantic>=2.11.5
    pydantic-core>=2.33.2
    pandas>=2.2.3
    numpy>=2.0.2
    python-dateutil>=2.9.0
    pytz>=2022.7.1
    typing-extensions>=4.13.2

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8.3.5
    pytest-cov>=6.1.1
    black>=25.1.0
    isort>=6.0.1
    mypy>=1.15.0
    flake8>=7.2.0
    coverage>=7.8.2

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,*.egg-info
extend-ignore = E203